<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="8sp">

    <data>

        <variable
            name="shoeitem"
            type="com.example.android.shoeinventory.model.Shoe" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="260sp"
                    android:layout_height="wrap_content"
                    android:text='@{(shoeitem.name !=null )? shoeitem.name: ""}' />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="260sp"
                    android:layout_height="wrap_content"
                    android:text='@{(shoeitem.company !=null )? shoeitem.company: ""}' />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="260sp"
                    android:layout_height="wrap_content"
                    android:text='@{(shoeitem.size !=null )? shoeitem.size : ""}' />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{(shoeitem.description !=null )? shoeitem.description : ""}' />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</layout>